# tg-notifications-admin

./: .drone.yml  .pre-commit-config.yaml  pyproject.toml
tests/: test_tg_notifications_admin.py
tg_notifications_admin/: main.py
tg_notifications_admin/auth/: jwthandler.py  users.py
tg_notifications_admin/crud/: users.py
tg_notifications_admin/database/: config.py  models.py  register.py
tg_notifications_admin/migrations/models/: 0_20220916125754_init.sql  1_20220916163552_update.sql  1_20220917102950_None.sql
tg_notifications_admin/routes/: users.py
tg_notifications_admin/schemas/: keys.py  token.py  users.py
