[tool.poetry]
name = "tg-notifications-admin"
version = "0.1.0"
description = ""
authors = ["Maksim Panin <me@naxrevlis.com>"]
readme = "README.md"
packages = [{include = "tg_notifications_admin"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "tests", "tg_notifications_admin"]
